# Practice

./: CMakeLists.txt
Practical_task_№1/: CMakeLists.txt
Practical_task_№1/task1/: CMakeLists.txt  task1.c
Practical_task_№1/task2/: CMakeLists.txt  task2.c
Practical_task_№1/task3/: CMakeLists.txt  task3.c
Practical_task_№1/task4/: CMakeLists.txt  task4.c
Practical_task_№1/task5/: CMakeLists.txt  task5_func.c  task5_main.c
Practical_task_№1/task6/: CMakeLists.txt  task6_func.c  task6_main.c
Practical_task_№1/task7/: CMakeLists.txt  func.h  task7_func.c  task7_main.c
Practical_task_№1/task8/: CMakeLists.txt
Practical_task_№2/: CMakeLists.txt
Practical_task_№2/task1/: task1.c
Practical_task_№2/task2/: task2.c
Practical_task_№2/task3/: CMakeLists.txt  task3.c
Practical_task_№3/: CMakeLists.txt
Practical_task_№3/do_while/: CMakeLists.txt  do_while.c
Practical_task_№3/for/: CMakeLists.txt  for.c  main.c
Practical_task_№3/while/: CMakeLists.txt  main.c  while.c
Practical_task_№4/: CMakeLists.txt
Practical_task_№4/task1/: task1.c
Practical_task_№4/task2/: task2.c
Practical_task_№4/task3/: task3.c
Practical_task_№4/task4/: task4.c
Practical_task_№5/: CMakeLists.txt  functions.c  functions.h  main.c
Practical_task_№6/: CMakeLists.txt  Zachetka.c
Practical_task_№7/: CMakeLists.txt  func.h  main.c  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
