cmake_minimum_required (VERSION 3.8)

project("Practice")

add_subdirectory("Practical_task_№1")
add_subdirectory("Practical_task_№2")
add_subdirectory("Practical_task_№3")
add_subdirectory("Practical_task_№4")
add_subdirectory("Practical_task_№5")
add_subdirectory("Practical_task_№6")
add_subdirectory("Practical_task_№7")
